--- a/style.css
+++ b/style.css
@@ -177,3 +177,88 @@ text-align: center;
 margin-top: 5px;
 margin-bottom: 10px;
 }
+
+.hide{
+  /* visibility: hidden; */
+  display: none;
+}
+
+@media screen and (max-width:576px) {
+          header{
+            padding:30px 0px;
+          }
+          .navbar-container {
+            flex-direction: column;
+          }
+          .banner-container,
+          .featured-product-container{
+            flex-direction: column-reverse;
+          }
+          .navbar-container .menu li{
+            margin-right: 1rem;
+          }
+          .banner-content{
+            text-align: center;
+          }
+          .banner-tittle{
+            padding: 10px;
+          }
+          .banner-description{
+            width: 100%;
+          }
+          .banner-photo{
+            width: 70%;
+          }
+        
+          .online-market-logo {
+            flex-wrap: wrap;
+            gap: 1.5rem;
+            margin:0 10px;
+          }
+          .logo{
+            width: 60px;
+          }
+          .card-container{
+            grid-template-columns:1fr;
+        }
+        .featured-product-container{
+          text-align: center;
+          padding: 15px;
+        }
+        footer{
+          height: 80vh;
+        }
+}
+
+@media screen and (min-width:576px) and (max-width:992px) {
+          .banner-container,
+          .featured-product-container{
+            flex-direction: column-reverse;
+          }
+          .navbar-container {
+            flex-direction: column;
+          }
+          .banner-content{
+            text-align: center;
+          }
+         .online-market-logo {
+          flex-wrap: wrap;
+          gap: 2rem;
+          margin: 30px;
+          }
+          .logo{
+            width: 90px;
+          }
+          .card-container{
+            text-align: center;
+            grid-template-columns:repeat(2,1fr);
+        }
+        .featured-product-container{
+          text-align: center;
+          padding: 15px;
+        }
+        footer{
+          height: 80vh;
+          margin: auto;
+        }
+}
